--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 header">
-                            <h1 class="text-center text-uppercase">clean blog</h1>
+                            <h1 class="text-center text-uppercase">blogger</h1>
                             <p class="text-center text-capitalize">Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
