--- a/pages/about.html
+++ b/pages/about.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Blog Website</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 header">
-                            <h1 class="text-center text-uppercase">blogger</h1>
+                            <h1 class="text-center text-uppercase">About Us</h1>
                             <p class="text-center text-capitalize">Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
@@ -33,38 +33,45 @@
             <div class="header">
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="pages/about.html">about</a></li>
-                        <li><a href="pages/addBlog.html">Add Blog</a></li>
+                        <li><a href="./about.html">about</a></li>
                     </ul>
                     <div class="logo">
-                        <a href="index.html">NishbruhCodes</a>
+                        <a href="../index.html">NishbruhCodes</a>
                     </div>
                     <ul class="right-menu">
-                        <li><a href="pages/Categories.html">Categories</a></li>
-                        <li><a href="pages/Authors.html">Authors</a></li>
-                        <li><a href="pages/sampleblog.html">sample blog</a></li>
-                        <li><a href="pages/contact.html">contact</a></li>
+                        <li><a href="Categories.html">Categories</a></li>
+                        <li><a href="Authors.html">Authors</a></li>
+                        <li><a href="sampleblog.html">sample blog</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
-
-    <!--blog-->
     <section id="blog">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
-                    <div id="data-blog-list">
-                        <!-- Dynmic Blog List goes here -->
+                    <div class="blog-content text-center text-capitalize">
+                        <a href="#">
+                            <h4 class="main-header font-weight-bold text-justify">About US </h4>
+                        </a>
+                        <p class="blog-main text-justify">Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit. Perferendis magnam saepe, reprehenderit architecto qui
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque commodi quidem, culpa
+                            inventore alias quos mollitia maxime et placeat modi nostrum sit suscipit libero
+                            quibusdam sapiente illum. Quo, dolorem. Tempora?Lorem ipsum dolor sit amet consectetur
+                            adipisicing elit. Dicta possimus maiores fugiat eaque incidunt saepe debitis voluptas vel
+                            tempora id soluta eveniet rem molestias modi assumenda, facilis voluptate expedita iste!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit a facere consequatur,
+                            libero enim voluptatum numquam voluptate non natus corrupti reprehenderit molestias tempora
+                            aperiam ipsum necessitatibus perferendis, ipsa harum? Blanditiis.
+                        </p>
+                    </div>
 
-                    </div>
-                    <div class="submit-btn mt-5">
-                        <button type="submit" class="btn btn-primary float-right font-weight-bold text-capitalize">older
-                            post
-                            &rightarrow;</button>
-                    </div>
+
+                    <hr>
+
                 </div>
             </div>
         </div>
@@ -107,10 +114,7 @@
             </div>
         </div>
     </section>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./blogs.js"> </script>
-
     <script>
         $(document).ready(function () {
             $(window).on('scroll', function () {
@@ -120,9 +124,6 @@
                     $(".sub-header").removeClass('active');
                 }
             })
-            let target = 'data-blog-list';
-
-            generateBlogs(target);
         });
     </script>
 </body>
