--- a/pages/sampleblog.html
+++ b/pages/sampleblog.html
@@ -13,7 +13,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -33,13 +33,14 @@
             <div class="header">
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
-                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">about</a></li>
                     </ul>
                     <div class="logo">
-                        <a href="index.html">NishbruhCodes</a>
+                        <a href="../index.html">NishbruhCodes</a>
                     </div>
                     <ul class="right-menu">
+                        <li><a href="Categories.html">Categories</a></li>
+                        <li><a href="Authors.html">Authors</a></li>
                         <li><a href="sampleblog.html">sample blog</a></li>
                         <li><a href="contact.html">contact</a></li>
                     </ul>
