--- a/pages/Categories.html
+++ b/pages/Categories.html
@@ -12,8 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -24,7 +23,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 header">
-                            <h1 class="text-center text-uppercase">blogger</h1>
+                            <h1 class="text-center text-uppercase">Categories</h1>
                             <p class="text-center text-capitalize">Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
@@ -33,31 +32,32 @@
             <div class="header">
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="pages/about.html">about</a></li>
-                        <li><a href="pages/addBlog.html">Add Blog</a></li>
+                        <li><a href="about.html">about</a></li>
+                        <li><a href="addBlog.html">Add Blog</a></li>
                     </ul>
                     <div class="logo">
-                        <a href="index.html">NishbruhCodes</a>
+                        <a href="../index.html">NishbruhCodes</a>
                     </div>
                     <ul class="right-menu">
-                        <li><a href="pages/Categories.html">Categories</a></li>
-                        <li><a href="pages/Authors.html">Authors</a></li>
-                        <li><a href="pages/sampleblog.html">sample blog</a></li>
-                        <li><a href="pages/contact.html">contact</a></li>
+                        <li><a href="Categories.html">Categories</a></li>
+                        <li><a href="Authors.html">Authors</a></li>
+                        <li><a href="sampleblog.html">sample blog</a></li>
+                        <li><a href="contact.html">contact</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!--blog-->
-    <section id="blog">
+    <!--Categories-->
+    <section id="catg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 mx-auto">
-                    <div id="data-blog-list">
-                        <!-- Dynmic Blog List goes here -->
+                    <h4 class="catg-head text-capitalize font-weight-bold">Categories</h4>
+                    <div id="data-catg-list">
+
+                        <!-- Dynmic Categories List goes here -->
 
                     </div>
                     <div class="submit-btn mt-5">
@@ -109,7 +109,7 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./blogs.js"> </script>
+    <script src="./categories.js"> </script>
 
     <script>
         $(document).ready(function () {
@@ -120,9 +120,9 @@
                     $(".sub-header").removeClass('active');
                 }
             })
-            let target = 'data-blog-list';
+            let target = 'data-catg-list';
 
-            generateBlogs(target);
+            generatecategories(target);
         });
     </script>
 </body>
