--- a/pages/addBlog.html
+++ b/pages/addBlog.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive Blog Website</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -24,7 +23,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 header">
-                            <h1 class="text-center text-uppercase">About Us</h1>
+                            <h1 class="text-center text-uppercase">blogger</h1>
                             <p class="text-center text-capitalize">Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
@@ -33,13 +32,14 @@
             <div class="header">
                 <div class="sub-header text-capitalize font-weight-bold ">
                     <ul class="left-menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">about</a></li>
+                        <li><a href="addBlog.html">Add Blog</a></li>
                     </ul>
                     <div class="logo">
-                        <a href="index.html">NishbruhCodes</a>
+                        <a href="../index.html">NishbruhCodes</a>
                     </div>
                     <ul class="right-menu">
+                        <li><a href="Categories.html">Categories</a></li>
+                        <li><a href="Authors.html">Authors</a></li>
                         <li><a href="sampleblog.html">sample blog</a></li>
                         <li><a href="contact.html">contact</a></li>
                     </ul>
@@ -47,31 +47,30 @@
             </div>
         </div>
     </section>
-    <section id="blog">
+    <section>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 mx-auto">
-                    <div class="blog-content text-center text-capitalize">
-                        <a href="#">
-                            <h4 class="main-header font-weight-bold text-justify">About US </h4>
-                        </a>
-                        <p class="blog-main text-justify">Lorem ipsum dolor sit amet,
-                            consectetur adipisicing elit. Perferendis magnam saepe, reprehenderit architecto qui
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque commodi quidem, culpa
-                            inventore alias quos mollitia maxime et placeat modi nostrum sit suscipit libero
-                            quibusdam sapiente illum. Quo, dolorem. Tempora?Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit. Dicta possimus maiores fugiat eaque incidunt saepe debitis voluptas vel
-                            tempora id soluta eveniet rem molestias modi assumenda, facilis voluptate expedita iste!
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit a facere consequatur,
-                            libero enim voluptatum numquam voluptate non natus corrupti reprehenderit molestias tempora
-                            aperiam ipsum necessitatibus perferendis, ipsa harum? Blanditiis.
-                        </p>
+            <div class="">
+                <form id="form-blog-list">
+                    <input type="hidden" name="id" id="id" value="0" />
+                    <input type="hidden" name="date" id="date" />
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
                     </div>
-
-
-                    <hr>
-
-                </div>
+                    <div class="form-group">
+                        <label for="category">Category</label>
+                        <input type="text" class="form-control" id="category" name="category" placeholder="Category">
+                    </div>
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input type="text" class="form-control" id="author" name="author" placeholder="Author">
+                    </div>
+                    <div class="form-check">
+                        <label for="categor">Category</label>
+                        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
             </div>
         </div>
     </section>
@@ -113,7 +112,9 @@
             </div>
         </div>
     </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./blogs.js"> </script>
     <script>
         $(document).ready(function () {
             $(window).on('scroll', function () {
@@ -123,8 +124,36 @@
                     $(".sub-header").removeClass('active');
                 }
             })
+            let target = 'data-blog-list ';
+            let targetcatg = 'data-catg-list';
+            let targetauthor = 'data-author-list';
+
+
+            document.querySelector("#form-blog-list").addEventListener('submit', (e) => {
+                e.preventDefault();
+                var blog = {};
+                $.each($("#form-blog-list").serializeArray(), function (_, kv) {
+                    if (blog.hasOwnProperty(kv.name)) {
+                        blog[kv.name] = $.makeArray(blog[kv.name]);
+                        blog[kv.name].push(kv.value);
+                    } else {
+                        blog[kv.name] = kv.value;
+                    }
+                });
+
+                //validation goes here!
+
+                let _id = new Date().toISOString()
+                blog.id = _id
+                blog.date = new Date().toISOString();
+                addBlog(blog, target);
+                addcatg(blog, targetcatg);
+                addauthor(blog, targetauthor);
+            })
         });
     </script>
 </body>
 
 </html>
+
+category author
