--- a/AddCategories(backup).html
+++ b/AddCategories(backup).html
@@ -109,7 +109,7 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="./categories.js"> </script>
+    <script src="../js/categories.js"> </script>
 
     <script>
         $(document).ready(function () {
