--- a/pages/sampleblog.html
+++ b/pages/sampleblog.html
@@ -39,8 +39,8 @@
                         <a href="../index.html">NishbruhCodes</a>
                     </div>
                     <ul class="right-menu">
-                        <li><a href="Categories.html">Categories</a></li>
-                        <li><a href="Authors.html">Authors</a></li>
+                        <li><a href="./AddCategories.html">Categories</a></li>
+                        <li><a href="./AddAuthors.html">Authors</a></li>
                         <li><a href="sampleblog.html">sample blog</a></li>
                         <li><a href="contact.html">contact</a></li>
                     </ul>
