--- a/pages/AddCategories.html
+++ b/pages/AddCategories.html
@@ -24,7 +24,7 @@
                     <div class="row">
                         <div class="col-sm-12 header">
                             <h1 class="text-center text-uppercase">Categories</h1>
-                            <p class="text-center text-capitalize">Lorem ipsum dolor sit amet</p>
+                            <p class="text-center text-capitalize">Start Blogging</p>
                         </div>
                     </div>
                 </div>
