--- a/pages/AddCategories.html
+++ b/pages/AddCategories.html
@@ -56,10 +56,10 @@
                     <h4 class="text-capitalize m-5 text-center display-4">add new categories</h4>
                     <!-- <label for="category" class="font-weight-bold h5 mt-5">Category</label> -->
                     <div class="row mb-5 p-2">
-                        <input type="text" class="form-control col-9" id="category" name="category"
+                        <input type="text" class="form-control col-sm-8 col-lg-9 " id="category" name="category"
                             placeholder="New Category">
-                        <div class="col-1"></div>
-                        <button type="submit" class="btn btn-dark col-2">Add</button>
+                        <div class="col-sm-1 "></div>
+                        <button type="submit" class="btn btn-dark col-sm-2 col-lg-2">Add</button>
                     </div>
                 </div>
             </form>
