--- a/pages/AddAuthors.html
+++ b/pages/AddAuthors.html
@@ -56,10 +56,10 @@
                     <h4 class="text-capitalize m-5 text-center display-4">add new Authors</h4>
                     <!-- <label for="category" class="font-weight-bold h5 mt-5">Authors</label> -->
                     <div class="row mb-5 p-2">
-                        <input type="text" class="form-control col-9" id="author" name="author"
+                        <input type="text" class="form-control col-sm-8" id="author" name="author"
                             placeholder="New Author">
                         <div class="col-1"></div>
-                        <button type="submit" class="btn btn-dark col-2">Add</button>
+                        <button type="submit" class="btn btn-dark col-sm-2">Add</button>
                     </div>
             </form>
             <div id="data-authors">
